Fix blurry assets, update README.md

--- a/src/stylesheets/sections/second-section.scss
+++ b/src/stylesheets/sections/second-section.scss
@@ -137,6 +137,7 @@
         border: 10px solid $gray-color;
         margin-bottom: $spacing-small;
         z-index: 2;
+        animation: float 5s ease-in-out infinite;
       }
     }
 
